[package]
name = "twitcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
xshell = "0.2.7"
strum = { version = "0.27", features = ["derive"] }
plotters = "0.3.7"
tera = "1"
